--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,11 @@ dependencies = [
     "anthropic (>=0.45.2,<0.46.0)",
     "numpy (>=2.2.2,<3.0.0)",
     "pytest (>=8.3.4,<9.0.0)",
-    "pytest-cov (>=6.0.0,<7.0.0)"
+    "pytest-cov (>=6.0.0,<7.0.0)",
+    "ruff (>=0.9.5,<0.10.0)",
+    "pre-commit (>=4.1.0,<5.0.0)",
+    "sphinx (>=8.1.3,<9.0.0)",
+    "sphinx-rtd-theme (>=3.0.2,<4.0.0)"
 ]
 
 [tool.poetry]
